
2011-11-24 Franz Holzinger  <franz@ttproducts.de>
	* fix bug: do not use the deprecated function t3lib_div::int_from_ver for TYPO3 4.6 and later

2011-11-16 Franz Holzinger  <franz@ttproducts.de>
	* fix bug: use the new method getLL_fh002 which supports TYPO3 4.6

2011-11-15 Franz Holzinger  <franz@ttproducts.de>
	* fix bug in implode for the field list of DBgetUpdate

2011-11-15 Franz Holzinger  <franz@ttproducts.de>
	* restructuring and CGL

2011-11-15 Franz Holzinger  <franz@ttproducts.de>
	* fix bug with TYPO3 4.6: use the getLL method tx_div2007_alpha5::getLL_fh002

2011-11-14 Franz Holzinger  <franz@ttproducts.de>
	* new feature: decide which user groups are selectable: allowedUserGroups, allowedSubgroups, deniedUserGroups and which must kept keepUnselectableUserGroups
	* fix bug: no requirement for tems_acknowledged by default

2011-10-04 Franz Holzinger  <franz@ttproducts.de>
	* new feature: add the field terms_acknowledged and a PDF file with the terms
	* fix bug: show an error text if there is not text for missing_<fieldname> found.

2011-09-08 Franz Holzinger  <franz@ttproducts.de>
	* issue #29523 (forge): improve the hook for the validation to use the error message generator

2011-09-05 Franz Holzinger  <franz@ttproducts.de>
	* fix bug with duplicate html tag ids in select box
	* fix bug with the check for required input fields: the data:<field> feature must not use an array

2011-05-30 Franz Holzinger  <franz@ttproducts.de>
	* better error messages if the file upload fails

2011-05-16 Franz Holzinger  <franz@ttproducts.de>
	* avoid unnecessary commands when ext_tables.php is included in the FE hook tt_products extendingTCA

2011-05-14 Franz Holzinger  <franz@ttproducts.de>
	* fix bug: enableAutoLoginOnConfirmation is also supported with md5 password

2011-03-03 Franz Holzinger  <franz@ttproducts.de>
	* fix bug: override values for group must not use array_diff if there has not been a usergroup array before
