@@ -1,3 +1,6 @@
+2012-01-13 Franz Holzinger  <franz@ttproducts.de>
+	* fix bug #18343: replace deprecated t3lib_div::intInRange by t3lib_utility_Math::forceIntegerInRange
+	* replace deprecated t3lib_div::testInt by t3lib_utility_Math::canBeInterpretedAsInteger
 
 2011-11-24 Franz Holzinger  <franz@ttproducts.de>
 	* fix bug: do not use the deprecated function t3lib_div::int_from_ver for TYPO3 4.6 and later
